로또 5단계 구현